<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:text="@string/daftar"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/edt_daftar_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_custom"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/nama"
        android:inputType="text"
        android:drawableEnd="@drawable/baseline_person_24"/>
    <EditText
        android:id="@+id/edt_daftar_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_custom"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/baseline_email_24"/>
    <EditText
        android:id="@+id/edt_daftar_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edt_custom"
        android:padding="16dp"
        android:layout_marginBottom="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableEnd="@drawable/baseline_lock_24"/>
    <Button
        android:id="@+id/btn_daftar_daftar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp"
        android:layout_marginBottom="8dp"
        android:text="@string/daftar"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_daftar_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_custom"
        android:padding="12dp"
        android:text="@string/masuk" />
</LinearLayout>