<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical"
            tools:context=".ui.DetailActivity">
            <TextView
                android:id="@+id/tv_diary_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                android:textStyle="bold"
                android:layout_marginBottom="24dp"
                tools:text="@tools:sample/date/ddmmyy"/>
            <EditText
                android:id="@+id/edt_diary_title"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginBottom="8dp"
                android:maxLines="1"
                android:maxLength="50"
                android:hint="@string/hint_diary_title"/>
            <EditText
                android:id="@+id/edt_diary_content"
                android:layout_width="match_parent"
                android:minHeight="60dp"
                android:layout_height="wrap_content"
                android:maxLength="300"
                android:layout_marginBottom="24dp"
                android:inputType="textMultiLine"
                android:hint="@string/hint_diary_content"/>
            <Button
                android:id="@+id/btn_add_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/btn_add_image"/>
            <ImageView
                android:id="@+id/iv_diary"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="64dp"
                tools:src="@tools:sample/backgrounds/scenic"
                android:scaleType="centerCrop"
                android:visibility="invisible"/>
            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_gravity="bottom"
                android:text="@string/btn_save"/>
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>
    </FrameLayout>
</ScrollView>
